--- a/www/index.html
+++ b/www/index.html
@@ -32,10 +32,10 @@
     </head>
     <body>
         <div class="app">
-            <h1>PhoneGap</h1>
+            
             <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+                <!---<p class="event listening">Connecting to Device</p>
+                <p class="event received">Device is Ready</p>--->
 				
             </div>
 			<a class= "start" href="data/maf.html">Start</a>
